Fixed dark mode color issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,6 @@
   }
 }
 body {
-  background-color: var(--background);
-  color: var(--foreground);
   font-family: var(--font-inter), sans-serif;
 }
 
